--- a/luqman-portfolio/package.json
+++ b/luqman-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "luqman-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luqmanrumaiz.github.io",
+  "homepage": "https://luqmanrumaiz.github.io/Luqman-Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
