--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "luqman-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luqmanrumaiz.github.io/Luqman-Portfolio",
+  "homepage": "https://luqmanrumaiz.github.io/luqman-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
