--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "luqman-portfolio",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://luqmanrumaiz.github.io/luqman-portfolio",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "contrast-js": "0.0.3",
-    "node-sass": "^5.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.2",
-    "sass": "^1.32.12",
-    "web-vitals": "^1.1.1"
+    "sass": "^1.32.13",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
