--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "node-sass": "^6.0.0",
+    "parallax-js": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.13",
     "web-vitals": "^1.0.1"
