--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
     "animate.css": "^4.1.1",
     "node-sass": "^6.0.0",
     "parallax-js": "^3.1.0",
@@ -14,7 +17,9 @@
     "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.13",
-    "web-vitals": "^1.0.1"
+    "simplebar-react": "^2.3.3",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
