--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
+  "homepage": "http://luqmanrumaiz.github.io/luqman-portfolio",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
     "node-sass": "^6.0.0",
-    "parallax-js": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-parallax": "^3.3.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.13",
-    "simplebar-react": "^2.3.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
@@ -25,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
